Greate refactoring
